		Markbook: removed Learning Area rubrics from multiple column add
		Markbook: fixed return and presetting of fields when landing on add page from Planner
		Markbook: made target scale selectable (so not constained to Default Assessment Scale)
		Markbook: fixed issue preventing some staff from seeing Markbook columns from other classes (depending on Edit rights)
		Messenger: fixed formatting of Sent From Gibbon tag
		Messenger: fixed display of email/SMS report for recipients with , in their name
		Messenger: disabled Canned Response for any non-staff users
		Messenger: doubled character limit on subject field
		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
		Planner: added ability to tag units, in order to help build curriculum maps
		Planner: fixed lesson plan duplicate return bug, when not in current year
		Planner: improved readability of Unit Overview in lesson plan view, by removing chat section where no messages exist
		Planner: added field to mark whether unit should be included in curriculum maps and other summaries
		Planner: made lesson plan Summary field optional, auto grabs content from Lesson Details field if blank
		Planner: switched from JS to HTML for Smart Block placeholders
		Resources: improved usability of tag entry interface
		Resources: fixed breakage of tags including apostrophes
		School Admin: fixed timezone issue in managing special days
		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
		School Admin: fixed PHP notice issue when adding special days
		School Admin: fixed PHP warning caused by empty arrays in Tracking Settings
		School Admin: added ability to link Educational Assistances to Form/Roll Groups
		School Admin: fixed leap year error in Manage Special Days