@@ -200,5 +200,8 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_cop
             
         }
     }
+
+    // Print the sidebar
+    $_SESSION[$guid]['sidebarExtra'] = sidebarExtra($guid, $pdo, $_SESSION[$guid]['gibbonPersonID'], $gibbonCourseClassID, 'markbook_edit.php');
 }
 ?>
