@@ -207,5 +207,8 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_tar
             }
         }
     }
+
+    // Print the sidebar
+    $_SESSION[$guid]['sidebarExtra'] = sidebarExtra($guid, $pdo, $_SESSION[$guid]['gibbonPersonID'], $gibbonCourseClassID, 'markbook_edit_targets.php');
 }
 ?>
